<resources>
    <string name="app_name">Gas Logger</string>
    <string name="history">History</string>
    <string name="num_placeholder">99.9</string>
    <string name="avg_mpg_label">Average\nMPG</string>
    <string name="row_odom_label">Odometer:</string>
    <string name="row_gas_label">Gas in Gal:</string>
    <string name="odom_hint">Odometer *</string>
    <string name="gas_hint">Gas in Gal *</string>

    <string name="toast_item_saved">Successfully saved!</string>

    <string name="blank_error">Cannot be blank</string>
    <string name="odom_low_value_error">Needs a value greater than</string>
    <string name="alrt_dismiss">Dismiss</string>
    <string name="alrt_submit">Submit</string>
    <string name="alrt_title">New Entry</string>
    <string name="empty_list_text">No items to display</string>
    <string name="required_asterisk">* indicates required field</string>
    <string name="del_all">Delete All</string>
    <string name="partial_fill">Partial Fill</string>
    <string name="del_all_title">Delete All Entries</string>
    <string name="del_pos_btn">Delete</string>
    <string name="del_dismiss_btn">Dismiss</string>
    <string name="del_btn_all">Hold to Delete</string>
    <string name="del_one_title_1_2">Delete Entry at</string>
    <string name="del_one_title_2_2">Miles</string>

    <!--SNACKBAR STRINGS-->
    <string name="save_snack_success">Save Successful</string>
    <string name="save_snack_error">Save Error</string>

    <string name="del_snack_success_1_2">Delete Successful</string>
    <string name="del_snack_entry_2_2">entry</string>
    <string name="del_snack_entries_2_2">entries</string>
    <string name="del_snack_error">Delete Error</string>
    <string name="frag_chart_title">Chart</string>
    <string name="frag_list_title">List</string>
    <string name="avg_label">Average</string>
    <string name="mpg_label">MPG</string>
    <string name="ok_text">OK</string>
    <string name="prev_odom_conflict">Value conflicts with previous entry</string>
    <string name="next_odom_conflict">Value conflicts with next entry</string>
</resources>
