<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartFrag_chart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"

        android:layout_toStartOf="@+id/chartFrag_relative_average"/>

    <RelativeLayout
        android:id="@+id/chartFrag_relative_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/chartFrag_text_avgLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_label"
            android:textColor="@color/text_color"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/chartFrag_text_mpgAvg"/>

        <TextView
            android:id="@+id/chartFrag_text_mpgAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_placeholder"
            android:textColor="@color/text_color"
            android:fontFamily="sans-serif-thin"
            android:textScaleX="0.6"
            android:letterSpacing="-0.1"
            android:textSize="120sp"/>

        <TextView
            android:id="@+id/chartFrag_text_mpgLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpg_label"
            android:textColor="@color/text_color"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/chartFrag_text_mpgAvg"/>
    </RelativeLayout>

</RelativeLayout>