<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RL_row"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp">
    <RelativeLayout
        android:id="@+id/row_relative_odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/row_text_odometerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_odom_label"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/row_text_odometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_placeholder"
            android:layout_toEndOf="@+id/row_text_odometerLabel"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_relative_odometer"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/row_text_gasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_gas_label"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/row_text_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_placeholder"
            android:layout_toEndOf="@+id/row_text_gasLabel"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>

    <ImageView android:id="@+id/row_image_partialFill"
		android:layout_width="@dimen/partial_icon_size"
		android:layout_height="@dimen/partial_icon_size"
		android:src="@drawable/partial_fill_icon"
		android:layout_alignBottom="@+id/row_text_timestamp"
		android:layout_alignParentStart="true"
		android:layout_marginEnd="10dp"
		android:visibility="invisible"/>

    <TextView
        android:id="@+id/row_text_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_placeholder"
        android:layout_below="@+id/row_button_edit"
        android:layout_alignParentEnd="true"/>
    <!--
    <ImageButton android:id="@+id/IB_row_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_edit"
        android:layout_toLeftOf="@+id/IB_row_delete" android:layout_toStartOf="@+id/IB_row_delete"/>
    -->
    <ImageButton
        android:id="@+id/row_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_edit"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>